@@ -124,7 +124,7 @@ class Releases:
                             pot += pot_size
                             mypot += pot_size
 
-                            #un = pot_size - tr - fz
+                            un = pot_size - tr - fz # XXX
                             if pot_size:
                                 perc = { 'translated' : 100*tr/pot_size, 'fuzzy' : 100*fz/pot_size, 'untranslated' : 100*un/pot_size }
                             else:
@@ -146,7 +146,7 @@ class Releases:
                                                                                    'description' : desc,
                                                                                    }
                         if mypot:
-                            #myun = mypot - mytr - myfz
+                            myun = mypot - mytr - myfz # XXX
                             ui_supp = "%.0f" % (100.0*mytr/mypot)
                             ui_percentages = { 'translated': 100*mytr/mypot, 'fuzzy': 100*myfz/mypot, 'untranslated': 100*myun/mypot }
                         else:
@@ -171,7 +171,7 @@ class Releases:
                             dpot += pot_size
                             mypot += pot_size
 
-                            #un = pot_size - tr - fz
+                            un = pot_size - tr - fz # XXX
                             if pot_size:
                                 perc = { 'translated' : 100*tr/pot_size, 'fuzzy' : 100*fz/pot_size, 'untranslated' : 100*un/pot_size }
                             else:
@@ -189,7 +189,7 @@ class Releases:
                                                                          'description' : documents[document]['description'],
                                                                          }
                         if mypot:
-                            #myun = mypot - mytr - myfz
+                            myun = mypot - mytr - myfz # XXX
                             doc_supp = "%.0f" % (100.0*mytr/mypot)
                             doc_percentages = { 'translated': 100*mytr/mypot, 'fuzzy': 100*myfz/mypot, 'untranslated': 100*myun/mypot }
                         else:
@@ -246,7 +246,7 @@ class Releases:
                             }
 
                         if pot:
-                            #un = pot - tr - fz
+                            un = pot - tr - fz # XXX
                             ui_supp = "%.0f" % (100.0*tr/pot)
                             ui_percentages = { 'translated': 100*tr/pot, 'fuzzy': 100*fz/pot, 'untranslated': 100*un/pot }
                         else:
@@ -254,7 +254,7 @@ class Releases:
                             ui_percentages = { 'translated': 0, 'fuzzy': 0, 'untranslated': 0 }
 
                         if dpot:
-                            #dun = dpot - dtr - dfz;
+                            dun = dpot - dtr - dfz # XXX
                             doc_supp = "%.0f" % (100.0*dtr/dpot)
                             doc_percentages = { 'translated': 100*dtr/dpot, 'fuzzy': 100*dfz/dpot, 'untranslated': 100*dun/dpot }
                         else:
@@ -278,7 +278,7 @@ class Releases:
                         categories.append(myCat)
 
             if ui_size:
-                #totalun = ui_size - totaltr - totalfz
+                totalun = ui_size - totaltr - totalfz # XXX
                 ui_supp = "%.0f" % (100.0*totaltr/ui_size)
                 ui_percentages = {
                     'translated': 100*totaltr/ui_size,
@@ -294,7 +294,7 @@ class Releases:
                     }
 
             if doc_size:
-                #dtotalun = doc_size - dtotaltr - dtotalfz
+                dtotalun = doc_size - dtotaltr - dtotalfz # XXX
                 doc_supp = "%.0f" % (100.0*dtotaltr/doc_size)
                 doc_percentages = {
                     'translated': 100*dtotaltr/doc_size,
