@@ -1,5 +1,9 @@
 2007-01-06  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.py: Revert to untranslated count from potsize-tr-fz.
+
+2007-01-06  Danilo Šegan  <danilo@gnome.org>
+
 	* update-stats.py: Add support for 'trunk' instead of 'HEAD'.
 
 2007-01-04  Lucas Rocha  <lucasr@gnome.org>
